Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-39335

[BP MB-37006] - consumer rss does not honour eventing memory quota for bucket op with small docs

    XMLWordPrintable

Details

    • Untriaged
    • Yes

    Description

      Build 6.5.0-4788

      Observed that even if eventing memory quota set as 24GB, consumer rss grows till 55GB when kv docs are of size 64 bytes.

      Here are run details for 2 hours of access phase-

      Job- http://perf.jenkins.couchbase.com/job/themis/4389

      cbmonitor link- http://cbmonitor.sc.couchbase.com/reports/html/?snapshot=themis_650-4788_load_access_and_wait_304a

      Attached screenshot of consumer rss during the test.

      This issue is not present in 6.5.0-3573, and present in 6.5.0-3607.

      Job for 6.5.0-3607- http://perf.jenkins.couchbase.com/job/themis/4393

      cbmonitor url for 6.5.0-3607- http://cbmonitor.sc.couchbase.com/reports/html/?snapshot=themis_650-3607_load_access_and_wait_d0b9

      We do not see this pattern when kv doc size is 1K, here is cbmonitor graph for 6.5.0-4821 build- http://cbmonitor.sc.couchbase.com/reports/html/?snapshot=themis_650-4821_load_access_and_wait_4e5c

      Change log between 6.5.0-3573 and 6.5.0-3607- http://172.23.123.43:8000/getchangelog?product=couchbase-server&fromb=6.5.0-3573&tob=6.5.0-3607

       

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jyotsna.nayak Jyotsna Nayak (Inactive)
              jeelan.poola Jeelan Poola
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty