MB-39335: Fix for rss growth in eventing-consumer

We observered in some test that v8 garbage collector not running
frequently as a result consumer rss grow continuously. With this
patch client will check the v8 heap size every 7 seconds and based
on v8 heap size and total consumer rss client will ask the v8 to
run the garbage collector.

Change-Id: Icbf3ce84325b19db1ad394b38bee9e9e4adbe32b
Reviewed-on: http://review.couchbase.org/119295
Reviewed-by: CI Bot
Reviewed-by: Jeelan Basha Poola <jeelan.poola@couchbase.com>
Tested-by: <ankit.prabhu@couchbase.com>
(cherry picked from commit b70a2e52aa87a23957383569df2f713af332c7e1)
Reviewed-on: http://review.couchbase.org/c/eventing/+/127968
Well-Formed: Build Bot <build@couchbase.com>
Tested-by: Jeelan Basha Poola <jeelan.poola@couchbase.com>