consumer/protocol.go
@@ -73,6 +73,7 @@ const (
 	workerThreadPartitionMap
 	timerContextSize
 	vbMap
+	workerThreadMemQuota
 )
 
 // message and opcode types for interpreting messages from C++ To Go
